<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:background="@mipmap/ic_launcher_round"
            />

        <EditText
            android:id="@+id/enter_login_te"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_login_hint"
            android:inputType="text"
            android:nextFocusDown="@+id/enter_email_te_signup"
            android:nextFocusForward="@+id/enter_email_te_signup"
            />

        <EditText
            android:id="@+id/enter_email_te_signup"
            android:hint="@string/enter_email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/enter_password_te_signup"
            android:nextFocusForward="@+id/enter_password_te_signup"
            />

        <EditText
            android:id="@+id/enter_password_te_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_password_hint"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/confirm_password_te_signup"
            android:nextFocusForward="@+id/confirm_password_te_signup"
            />

        <EditText
            android:id="@+id/confirm_password_te_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/signUp_btn"
            android:nextFocusForward="@+id/signUp_btn"
            />

        <Button
            android:id="@+id/signUp_btn"
            android:text="@string/signUp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>
        
        <TextView
            android:id="@+id/already_have_account"
            android:text="@string/already_have_account_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="#4444ff" />
    </LinearLayout>
    </ScrollView>

</RelativeLayout>