<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:background="@mipmap/ic_launcher_round"
            />

        <EditText
            android:id="@+id/enter_email_te_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_email_hint"
            android:inputType="text"
            android:nextFocusDown="@+id/send_recover_code_btn"
            android:nextFocusForward="@+id/send_recover_code_btn"
            />

        <Button
            android:id="@+id/send_recover_code_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/send_recover_code_btn"
            />

        <TextView
            android:id="@+id/back_to_sign_in_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_sign_in_tv"
            android:gravity="center"
            android:textColor="#4444ff"
            />

    </LinearLayout>

</RelativeLayout>